# Gray-Leaf-Project

./: .gitignore  CMakeLists.txt  README-Chinese.md  README.md
Compiler/cmake/: add_gray_leaf.cmake  add_gray_leaf_compiler.cmake  set_windows_version_compiler.cmake
Compiler/include/Lexer/: Lexer.h
Compiler/include/Lexer/Token/: TokenTypes.def  TokenTypes.h
Compiler/src/Lexer/: CMakeLists.txt  Lexer.cpp
Compiler/src/Lexer/Token/: CMakeLists.txt  TokenTypes.cpp
Grammar/: basic_type.md  constant.md  first.md
Support/cmake/: add_gray_leaf_support.cmake  set_windows_version_support.cmake
Tools/: Dll_import_or_export.h  Shared_import_or_export.h
Tools/Config/: Config.h.in  DLL_Version_Info.rc.in
